crates/pgls_pretty_print/tests/snapshots/multi/tests__tuplesort_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/tuplesort.sql
snapshot_kind: text
---
SET max_parallel_maintenance_workers = 0;

SET max_parallel_workers = 0;

CREATE TEMPORARY TABLE abbrev_abort_uuids
(
  id serial NOT NULL,
  abort_increasing UUID,
  abort_decreasing UUID,
  noabort_increasing UUID,
  noabort_decreasing UUID
);

INSERT INTO abbrev_abort_uuids
(
  abort_increasing,
  abort_decreasing,
  noabort_increasing,
  noabort_decreasing
)
SELECT
  CAST('00000000-0000-0000-0000-' ||
  to_char(g.i, '000000000000FM')
  AS UUID)
  AS abort_increasing,
  CAST('00000000-0000-0000-0000-' ||
  to_char(
  20000 - g.i,
  '000000000000FM'
  )
  AS UUID)
  AS abort_decreasing,
  CAST(to_char(
  g.i % 10009,
  '00000000FM'
  ) ||
  '-0000-0000-0000-' ||
  to_char(g.i, '000000000000FM')
  AS UUID)
  AS noabort_increasing,
  CAST(to_char(
  (20000 - g.i) % 10009,
  '00000000FM'
  ) ||
  '-0000-0000-0000-' ||
  to_char(
  20000 - g.i,
  '000000000000FM'
  )
  AS UUID)
  AS noabort_decreasing
FROM
  generate_series(0, 20000, 1)
  AS g (i);

INSERT INTO abbrev_abort_uuids (id) VALUES (0);

INSERT INTO abbrev_abort_uuids DEFAULT VALUES;

INSERT INTO abbrev_abort_uuids DEFAULT VALUES;

INSERT INTO abbrev_abort_uuids
(
  abort_increasing,
  abort_decreasing,
  noabort_increasing,
  noabort_decreasing
)
SELECT
  abort_increasing,
  abort_decreasing,
  noabort_increasing,
  noabort_decreasing
FROM
  abbrev_abort_uuids
WHERE
  (id < 10 OR id > 19990) AND
  id % 3 = 0 AND
  abort_increasing IS NOT NULL;

SELECT
  abort_increasing,
  abort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY abort_increasing
OFFSET 20000 - 4;

SELECT
  abort_increasing,
  abort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY abort_decreasing NULLS FIRST
OFFSET 20000 - 4;

SELECT
  noabort_increasing,
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY noabort_increasing
OFFSET 20000 - 4;

SELECT
  noabort_increasing,
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY noabort_decreasing NULLS FIRST
OFFSET 20000 - 4;

SELECT
  abort_increasing,
  noabort_increasing
FROM
  abbrev_abort_uuids
ORDER BY abort_increasing
LIMIT 5;

SELECT
  abort_increasing,
  noabort_increasing
FROM
  abbrev_abort_uuids
ORDER BY noabort_increasing NULLS FIRST
LIMIT 5;

CREATE INDEX "abbrev_abort_uuids__noabort_increasing_idx"
ON abbrev_abort_uuids
USING btree
(
  noabort_increasing
);

CREATE INDEX "abbrev_abort_uuids__noabort_decreasing_idx"
ON abbrev_abort_uuids
USING btree
(
  noabort_decreasing
);

SELECT
  id,
  noabort_increasing,
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY noabort_increasing
LIMIT 5;

SELECT
  id,
  noabort_increasing,
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY noabort_increasing
LIMIT 5;

SELECT
  id,
  noabort_increasing,
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY noabort_decreasing
LIMIT 5;

SELECT
  id,
  noabort_increasing,
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY noabort_decreasing
LIMIT 5;

CREATE INDEX "abbrev_abort_uuids__abort_increasing_idx"
ON abbrev_abort_uuids
USING btree
(
  abort_increasing
);

CREATE INDEX "abbrev_abort_uuids__abort_decreasing_idx"
ON abbrev_abort_uuids
USING btree
(
  abort_decreasing
);

SELECT
  id,
  abort_increasing,
  abort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY abort_increasing
LIMIT 5;

SELECT
  id,
  abort_increasing,
  abort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY abort_increasing
LIMIT 5;

SELECT
  id,
  abort_increasing,
  abort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY abort_decreasing
LIMIT 5;

SELECT
  id,
  abort_increasing,
  abort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY abort_decreasing
LIMIT 5;

BEGIN;

SET LOCAL enable_indexscan = 'false';

CLUSTER abbrev_abort_uuids
USING abbrev_abort_uuids__abort_increasing_idx;

SELECT
  id,
  abort_increasing,
  abort_decreasing,
  noabort_increasing,
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY ctid
LIMIT 5;

SELECT
  id,
  abort_increasing,
  abort_decreasing,
  noabort_increasing,
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY ctid DESC
LIMIT 5;

ROLLBACK;

BEGIN;

SET LOCAL enable_indexscan = 'false';

CLUSTER abbrev_abort_uuids
USING abbrev_abort_uuids__abort_decreasing_idx;

SELECT
  id,
  abort_increasing,
  abort_decreasing,
  noabort_increasing,
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY ctid
LIMIT 5;

SELECT
  id,
  abort_increasing,
  abort_decreasing,
  noabort_increasing,
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY ctid DESC
LIMIT 5;

ROLLBACK;

BEGIN;

SET LOCAL enable_indexscan = 'false';

CLUSTER abbrev_abort_uuids
USING abbrev_abort_uuids__noabort_increasing_idx;

SELECT
  id,
  abort_increasing,
  abort_decreasing,
  noabort_increasing,
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY ctid
LIMIT 5;

SELECT
  id,
  abort_increasing,
  abort_decreasing,
  noabort_increasing,
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY ctid DESC
LIMIT 5;

ROLLBACK;

BEGIN;

SET LOCAL enable_indexscan = 'false';

CLUSTER abbrev_abort_uuids
USING abbrev_abort_uuids__noabort_decreasing_idx;

SELECT
  id,
  abort_increasing,
  abort_decreasing,
  noabort_increasing,
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY ctid
LIMIT 5;

SELECT
  id,
  abort_increasing,
  abort_decreasing,
  noabort_increasing,
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY ctid DESC
LIMIT 5;

ROLLBACK;

SELECT
  left(a, 10),
  b
FROM
  (VALUES
    (repeat('a', 512 * 1024), 1),
    (repeat('b', 512 * 1024), 2))
  AS v (a, b)
ORDER BY v.a DESC;

BEGIN;

SET LOCAL enable_indexscan = 'false';

EXPLAIN (COSTS 'off')
DECLARE "c" SCROLL
CURSOR
FOR SELECT
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY noabort_decreasing;;

DECLARE "c" SCROLL
CURSOR
FOR SELECT
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY noabort_decreasing;;

FETCH NEXT FROM c;

FETCH NEXT FROM c;

FETCH PRIOR FROM c;

FETCH PRIOR FROM c;

FETCH PRIOR FROM c;

FETCH PRIOR FROM c;

FETCH NEXT FROM c;

FETCH ABSOLUTE -1 FROM c;

FETCH PRIOR FROM c;

FETCH NEXT FROM c;

FETCH NEXT FROM c;

FETCH NEXT FROM c;

FETCH PRIOR FROM c;

FETCH NEXT FROM c;

COMMIT;

BEGIN;

SET LOCAL enable_indexscan = 'false';

SET LOCAL work_mem = '100kB';

EXPLAIN (COSTS 'off')
DECLARE "c" SCROLL
CURSOR
FOR SELECT
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY noabort_decreasing;;

DECLARE "c" SCROLL
CURSOR
FOR SELECT
  noabort_decreasing
FROM
  abbrev_abort_uuids
ORDER BY noabort_decreasing;;

FETCH NEXT FROM c;

FETCH NEXT FROM c;

FETCH PRIOR FROM c;

FETCH PRIOR FROM c;

FETCH PRIOR FROM c;

FETCH PRIOR FROM c;

FETCH NEXT FROM c;

FETCH ABSOLUTE -1 FROM c;

FETCH PRIOR FROM c;

FETCH NEXT FROM c;

FETCH NEXT FROM c;

FETCH NEXT FROM c;

FETCH PRIOR FROM c;

FETCH NEXT FROM c;

COMMIT;

SELECT
  (array_agg(
  id ORDER BY id DESC NULLS FIRST
  ))[0:5],
  (array_agg(
  abort_increasing ORDER BY abort_increasing DESC NULLS LAST
  ))[0:5],
  (array_agg(
  CAST(id AS TEXT) ORDER BY CAST(id AS TEXT) DESC NULLS LAST
  ))[0:5],
  percentile_disc(
  0.99
  )
  WITHIN GROUP (ORDER BY id),
  percentile_disc(
  0.01
  )
  WITHIN GROUP (ORDER BY id),
  percentile_disc(
  0.8
  )
  WITHIN GROUP (ORDER BY abort_increasing),
  percentile_disc(
  0.2
  )
  WITHIN GROUP (ORDER BY CAST(id AS TEXT)),
  RANK(
  '00000000-0000-0000-0000-000000000000',
  '2',
  '2'
  )
  WITHIN GROUP (
    ORDER BY noabort_increasing,
    id,
    CAST(id AS TEXT)
  )
FROM
  (SELECT
    *
  FROM
    abbrev_abort_uuids
  UNION ALL
  SELECT
    NULL,
    NULL,
    NULL,
    NULL,
    NULL)
  AS s;

BEGIN;

SET LOCAL work_mem = '100kB';

SELECT
  (array_agg(
  id ORDER BY id DESC NULLS FIRST
  ))[0:5],
  (array_agg(
  abort_increasing ORDER BY abort_increasing DESC NULLS LAST
  ))[0:5],
  (array_agg(
  CAST(id AS TEXT) ORDER BY CAST(id AS TEXT) DESC NULLS LAST
  ))[0:5],
  percentile_disc(
  0.99
  )
  WITHIN GROUP (ORDER BY id),
  percentile_disc(
  0.01
  )
  WITHIN GROUP (ORDER BY id),
  percentile_disc(
  0.8
  )
  WITHIN GROUP (ORDER BY abort_increasing),
  percentile_disc(
  0.2
  )
  WITHIN GROUP (ORDER BY CAST(id AS TEXT)),
  RANK(
  '00000000-0000-0000-0000-000000000000',
  '2',
  '2'
  )
  WITHIN GROUP (
    ORDER BY noabort_increasing,
    id,
    CAST(id AS TEXT)
  )
FROM
  (SELECT
    *
  FROM
    abbrev_abort_uuids
  UNION ALL
  SELECT
    NULL,
    NULL,
    NULL,
    NULL,
    NULL)
  AS s;

ROLLBACK;

CREATE TEMPORARY TABLE test_mark_restore
(
  col1 INT,
  col2 INT,
  col12 INT
);

INSERT INTO test_mark_restore
(col1, col2, col12)
SELECT
  a.i,
  b.i,
  a.i * b.i
FROM
  generate_series(1, 500)
  AS a (i),
  generate_series(1, 5) AS b (i);

BEGIN;

SET LOCAL enable_nestloop = off;

SET LOCAL enable_hashjoin = off;

SET LOCAL enable_material = off;

SELECT
  '
    SELECT col12, count(distinct a.col1), count(distinct a.col2), count(distinct b.col1), count(distinct b.col2), count(*)
    FROM test_mark_restore a
        JOIN test_mark_restore b USING(col12)
    GROUP BY 1
    HAVING count(*) > 1
    ORDER BY 2 DESC, 1 DESC, 3 DESC, 4 DESC, 5 DESC, 6 DESC
    LIMIT 10
'
  AS qry;

SET LOCAL work_mem = '100kB';

COMMIT;
